fix overflow on country code

--- a/frontend/src/assets/style/style.css
+++ b/frontend/src/assets/style/style.css
@@ -6,34 +6,46 @@
 .select-wrapper {
 	position: relative;
 	user-select: none;
+	float: left;
+	text-align: left;
+	margin-left: 10px;
 }
 .select {
 	position: relative;
 	display: flex;
 	flex-direction: column;
+	width: 60px;
 }
 .select-trigger {
 	position: relative;
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
 	color: #3b3b3b;
 	cursor: pointer;
+	width: 60px;
 }
 .custom-options {
 	position: absolute;
 	display: block;
 	top: 100%;
-	left: 0;
+	left: -22%;
 	right: 0;
 	transition: all 0.5s;
 	opacity: 0;
 	visibility: hidden;
 	pointer-events: none;
+	background-color: #e9ecef;
 	z-index: 2;
-	width: 100%;
+	width: 144%;
+	height: 100px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	border: 1px solid #ced4da;
 }
 
+.custom-options::-webkit-scrollbar {
+	width: 0;
+	height: 0;
+}
 .open {
 	opacity: 1;
 	visibility: visible;
@@ -45,6 +57,10 @@
 	color: #3b3b3b;
 	cursor: pointer;
 	transition: all 0.5s;
+	float: left;
+	text-align: left;
+	padding-left: 10px;
+	width: 100%;
 }
 .custom-option:hover {
 	cursor: pointer;
